<resources>
    <string name="app_name">Guardian News</string>

    <!-- Error messages -->
    <string name="no_articles_found">Currently, there is nothing to display.\nCheck again later for new stories.</string>
    <string name="no_internet">Oops!\nYou are not connected to the Internet.</string>

    <!-- Error message icon description -->
    <string name="empty_view_image_description">No Internet or Error icon</string>

    <!-- Settings Activity ActionBar title -->
    <string name="settings_title">Article Settings</string>

    <!-- Order By preference: contains Newest, Oldest, and Relevance -->
    <string name="order_by_title">Order By</string>
    <string name="order_by_key" translatable="false">order_by</string>
    <string name="order_by_default" translatable="false">@string/order_by_newest_value</string>

    <string name="order_by_newest_title">Newest</string>
    <string name="order_by_newest_value" translatable="false">newest</string>

    <string name="order_by_oldest_title">Oldest</string>
    <string name="order_by_oldest_value" translatable="false">oldest</string>

    <string name="order_by_relevance_title">Relevance</string>
    <string name="order_by_relevance_value" translatable="false">relevance</string>

    <!-- Page Size preference: 10 articles displayed by default -->
    <string name="page_size_title">Articles Displayed</string>
    <string name="page_size_key" translatable="false">page_size</string>
    <string name="page_size_default" translatable="false">10</string>

    <!-- Keyword preference: -->
    <string name="keyword_title">Keyword</string>
    <string name="keyword_key" translatable="false">keyword</string>
    <string name="keyword_default" translatable="false"></string>

    <!-- Navigation Drawer items -->
    <string name="section_us_news_title">US News</string>
    <string name="section_world_news_title">World News</string>
    <string name="section_environment_title">Environment</string>
    <string name="section_sports_title">Sports</string>
    <string name="section_business_title">Business</string>
    <string name="section_tech_title">Technology</string>
    <string name="section_science_title">Science</string>
    <string name="section_entertainment_header">Entertainment</string>
    <string name="section_film_title">Film</string>
    <string name="section_books_title">Books</string>
    <string name="section_music_title">Music</string>
    <string name="section_settings_header">Settings</string>
</resources>
